--- a/frontend/plano-de-pagamento.html
+++ b/frontend/plano-de-pagamento.html
@@ -86,13 +86,17 @@
                 color: #000 !important;
                 box-shadow: none !important;
             }
-            table {
-                page-break-inside: avoid;
+            table, .table, .table-bordered, th, td {
+                border: 1px solid #333 !important;
+                border-collapse: collapse !important;
             }
-            th, td {
+            th, td, .table th, .table td, .table-bordered th, .table-bordered td {
                 color: #000 !important;
                 background: #fff !important;
-                border-color: #333 !important;
+                border: 1px solid #333 !important;
+            }
+            table {
+                page-break-inside: avoid;
             }
             input, select, textarea {
                 border: none !important;
